# draxl

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  Makefile  NOTICE  README.md
crates/draxl-agent/: Cargo.toml
crates/draxl-agent/src/: error.rs  lib.rs  support.rs  types.rs
crates/draxl-ast/: Cargo.toml
crates/draxl-ast/src/: canonical.rs  lib.rs
crates/draxl-cli/: Cargo.toml
crates/draxl-cli/src/: main.rs  mcp_setup.rs
crates/draxl-cli/tests/: cli_e2e.rs  mcp_stdio_e2e.rs
crates/draxl-itest/: Cargo.toml
crates/draxl-itest/src/: codex.rs  error.rs  lib.rs  main.rs  mcp.rs  support.rs  workspace.rs
crates/draxl-itest/src/fixtures/: mod.rs  ranks_smoke.rs
crates/draxl-itest/src/scenarios/: mod.rs  ranks_smoke.rs
crates/draxl-itest/tests/: codex_goal_driven_ranks.rs  codex_ranks_smoke.rs
crates/draxl-lower-rust/: Cargo.toml
crates/draxl-lower-rust/src/: lib.rs
crates/draxl-merge/: Cargo.toml
crates/draxl-merge/src/: context.rs  detect.rs  explain.rs  lib.rs  model.rs  render.rs  semantic.rs
crates/draxl-merge/tests/: hard_conflicts.rs  semantic_conflicts.rs
crates/draxl-parser/: Cargo.toml
crates/draxl-parser/src/: lexer.rs  lib.rs  parser.rs
crates/draxl-patch/: Cargo.toml
crates/draxl-patch/src/: error.rs  lib.rs  model.rs  schema.rs
crates/draxl-patch/src/apply/: attach.rs  delete.rs  insert.rs  mod.rs  move.rs  put.rs  replace.rs  set_clear.rs  support.rs
crates/draxl-patch/src/text/: error.rs  mod.rs  parse.rs  resolve.rs  schema.rs  surface.rs
crates/draxl-printer/: Cargo.toml
crates/draxl-printer/src/: canonical.rs  lib.rs  render.rs
crates/draxl-rust/: Cargo.toml
crates/draxl-rust/src/: lib.rs  merge_context.rs  merge_semantics.rs  patch_schema.rs
crates/draxl-rust/src/import/: mod.rs
crates/draxl-rust/src/lower/: mod.rs
crates/draxl-rust/src/parse/: error.rs  lexer.rs  mod.rs  parser.rs  syntax.rs
crates/draxl-rust/src/render/: mod.rs
crates/draxl-validate/: Cargo.toml
crates/draxl-validate/src/: error.rs  lib.rs
crates/draxl-validate/src/validator/: collect.rs  mod.rs  rules.rs
docs/: architecture.md  conflicts.md  draxl_patch_ops_v0.md  merge-conflicts-todo.md  patch-op-syntax.md  patch-text-execution-todo.md  patching.md  semantic-conflicts.md  syntax.md
docs/merge/: README.md  conflicts.md  implementation-todo.md  semantic-conflicts.md
docs/patching/: README.md  bundles.md  implementation-todo.md  semantics.md  syntax.md
docs/private/: node-ids-and-field-addressing.md
docs/todo/: README.md  patching.md  python-bootstrap-profile.md  rust-to-draxl-conversion.md
examples/: 01_add.rs.dx  02_shapes.rs.dx  03_match.rs.dx  04_ranks.rs.dx  05_use_tree_group.rs.dx
src/: lib.rs
tests/: git_merge.rs  language_dispatch.rs  lower_compile.rs  lower_rust.rs  parse_roundtrip.rs  patch_ops.rs  patch_text.rs  public_api.rs  validation.rs
tests/golden/: 01_add.fmt.rs.dx  01_add.json  01_add.lowered.rs  02_shapes.fmt.rs.dx  02_shapes.json  02_shapes.lowered.rs  03_match.fmt.rs.dx  03_match.json  03_match.lowered.rs  04_ranks.fmt.rs.dx  04_ranks.json  04_ranks.lowered.rs  05_use_tree_group.fmt.rs.dx  05_use_tree_group.json  05_use_tree_group.lowered.rs
tests/support/: mod.rs
