[package]
name = "draxl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agent-native source for semantic program control."
documentation = "https://docs.rs/draxl"
keywords = ["ast", "parser", "agent", "language", "ai"]
categories = ["compilers", "development-tools"]
readme = "README.md"

[workspace]
members = [
    ".",
    "crates/draxl-ast",
    "crates/draxl-parser",
    "crates/draxl-printer",
    "crates/draxl-validate",
    "crates/draxl-lower-rust",
    "crates/draxl-patch",
    "crates/draxl-merge",
    "crates/draxl-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rndhouse <rndhouse@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/draxl-org/draxl"
homepage = "https://draxl.dev"

[workspace.dependencies]
draxl-ast = { version = "0.1.0", path = "crates/draxl-ast" }
draxl-parser = { version = "0.1.0", path = "crates/draxl-parser" }
draxl-printer = { version = "0.1.0", path = "crates/draxl-printer" }
draxl-validate = { version = "0.1.0", path = "crates/draxl-validate" }
draxl-lower-rust = { version = "0.1.0", path = "crates/draxl-lower-rust" }
draxl-patch = { version = "0.1.0", path = "crates/draxl-patch" }
draxl-merge = { version = "0.1.0", path = "crates/draxl-merge" }

[dependencies]
draxl-ast.workspace = true
draxl-parser.workspace = true
draxl-printer.workspace = true
draxl-validate.workspace = true
draxl-lower-rust.workspace = true
draxl-patch.workspace = true
draxl-merge.workspace = true
