[package]
name = "draxl-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal agent-edit backend and MCP server for Draxl"

[dependencies]
draxl = { version = "0.1.0", path = "../.." }
rmcp = { version = "1.3.0", features = ["transport-io"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
