[package]
name = "draxl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for Draxl"
documentation = "https://docs.rs/draxl-cli"
keywords = ["cli", "parser", "refactoring", "rust", "ai"]
categories = ["command-line-utilities", "compilers"]

[[bin]]
name = "draxl"
path = "src/main.rs"

[dependencies]
draxl = { version = "0.1.0", path = "../.." }
draxl-agent = { version = "0.1.0", path = "../draxl-agent" }
serde_json.workspace = true
tokio = { version = "1", features = ["rt", "io-std"] }
