[package]
name = "draxl-itest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust-first integration harness for Draxl agent tool experiments"

[dependencies]
draxl = { version = "0.1.0", path = "../.." }
rmcp = { version = "1.3.0", features = ["transport-io"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
