[package]
name = "draxl-lower-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lower validated Draxl Source v0 files to ordinary Rust"
documentation = "https://docs.rs/draxl-lower-rust"
homepage = "https://docs.rs/draxl-lower-rust"
keywords = ["compiler", "lowering", "rust", "syntax", "ai"]
categories = ["compilers", "development-tools"]

[dependencies]
draxl-ast.workspace = true
draxl-printer.workspace = true
