[package]
name = "draxl-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language-dispatch facade for Draxl parsing"
documentation = "https://docs.rs/draxl-parser"
keywords = ["parser", "lexer", "syntax", "rust", "ai"]
categories = ["compilers", "parser-implementations"]

[dependencies]
draxl-ast.workspace = true
draxl-rust.workspace = true
