[package]
name = "draxl-patch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Structured semantic patch operations over the Draxl model"
documentation = "https://docs.rs/draxl-patch"
keywords = ["patch", "ast", "refactoring", "rust", "ai"]
categories = ["compilers", "development-tools"]

[dependencies]
draxl-ast.workspace = true
draxl-parser.workspace = true
