[package]
name = "draxl-printer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Language-dispatch facade for Draxl rendering"
documentation = "https://docs.rs/draxl-printer"
keywords = ["printer", "formatter", "syntax", "rust", "ai"]
categories = ["compilers", "development-tools"]

[dependencies]
draxl-ast.workspace = true
draxl-rust.workspace = true
