[package]
name = "draxl-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust-profile support for Draxl"
documentation = "https://docs.rs/draxl-rust"
keywords = ["compiler", "lowering", "rust", "syntax", "ai"]
categories = ["compilers", "development-tools"]

[dependencies]
draxl-ast.workspace = true
syn.workspace = true
